--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Instituto Manduvi - SocialTech que Transforma Vidas</title>
     <meta name="description" content="Instituto Manduvi - SocialTech que transforma vidas e comunidades. Inspirados na força da árvore Manduvi, desenvolvemos soluções sustentáveis com impacto duradouro no Pantanal e além." />
     <meta name="keywords" content="instituto manduvi, socialtech, impacto social, pantanal, cuiabá, mato grosso, sustentabilidade, inovação social" />
+    <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" async></script>
   </head>
   <body>
     <div id="root"></div>
