--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSP temporariamente removido para debug -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://api.openai.com https://cdn.platform.openai.com; frame-src 'self' https://cdn.platform.openai.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.platform.openai.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https:; font-src 'self' https://cdn.openai.com; object-src 'none'; base-uri 'self'; form-action 'self';" />
     <meta http-equiv="Permissions-Policy" content="fullscreen=*" />
     <title>Instituto Manduvi - SocialTech que Transforma Vidas</title>
     <meta name="description" content="Instituto Manduvi - SocialTech que transforma vidas e comunidades. Inspirados na força da árvore Manduvi, desenvolvemos soluções sustentáveis com impacto duradouro no Pantanal e além." />
     <meta name="keywords" content="instituto manduvi, socialtech, impacto social, pantanal, cuiabá, mato grosso, sustentabilidade, inovação social" />
-    <!-- Script do ChatKit removido temporariamente para debug -->
+    <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" async></script>
   </head>
   <body>
     <div id="root"></div>
