feat: Implementar widgets reais das redes sociais
- Adicionar Instagram Embed Widget com script oficial
- Implementar Facebook Page Plugin com SDK
- Configurar LinkedIn Company Page Widget
- Adicionar YouTube Channel Embed com iframe
- Incluir scripts oficiais no index.html
- Manter fallbacks para quando widgets não carregarem
- Preparar estrutura para dados reais das redes sociais

--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
     })();
   </script>
   <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" async></script>
+  
+  <!-- Instagram Embed Script -->
+  <script async src="//www.instagram.com/embed.js"></script>
+  
+  <!-- Facebook SDK -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v18.0" nonce=""></script>
+  
+  <!-- LinkedIn Embed Script -->
+  <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: pt_BR</script>
+  
+  <!-- YouTube Embed Script -->
+  <script src="https://apis.google.com/js/api.js"></script>
   <script>
     // Script adicional para garantir que o polyfill seja aplicado após o ChatKit carregar
     window.addEventListener('load', function() {
